* Issue #1408 - Updated BuddyPress styling where theme colors caused illegibility. * Added screenshot

--- a/assets/styles/plugins/_plugins.scss
+++ b/assets/styles/plugins/_plugins.scss
@@ -2,3 +2,82 @@
  * Plugins
  */
 
+/**
+ * Multisite Directory
+ * @link https://wordpress.org/plugins/multisite-directory/
+ *
+ */
+.network-directory-sites {
+    &> li {
+        font-family: $font__heading;
+        color: $color__foreground;
+    }
+}
+
+/**
+ * BuddyPress
+ * @link https://buddypress.org
+ *
+ */
+body.buddypress {
+
+    #primary {
+        li {
+            color: $color__background;
+        }    
+    }
+
+
+    .entry-title {}
+    #item-header-content {}
+
+    .bpeo-ical-link {
+        .icon:before {
+           color: $color__foreground; 
+        }
+    }
+}
+
+@include breakpoint(md) {
+    body.buddypress {
+
+        #item-header {
+            padding-bottom: .5em;
+        }
+        #item-body {
+            h2,
+            h3 {
+                margin-left: 15px;
+            }
+            h3.hndle {
+                margin-left: 0;
+            }
+        }
+        .entry-title {
+            margin-left: 15px;
+        }
+        #item-header-content {
+            margin-left: 15px;
+        }
+    }
+}
+
+/**
+ * BP Docs
+ * @link https://github.com/boonebgorges/buddypress-docs
+ *
+ */
+ .bp-docs {
+    
+    .folder-action-links,
+    .doctable {
+        padding-right: .25em;
+        padding-left: .25em;
+    }
+
+    .no-docs {
+        margin: .25em;
+    }
+ }
+
+
